# MF-ResHydroNet

./: README.md
MF-ResHydroNet/: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
MF-ResHydroNet/configs/: example.json
MF-ResHydroNet/data/: README.md
MF-ResHydroNet/data/demo/: README.md  demo_pairs.csv
MF-ResHydroNet/data/manuscript/: README.md
MF-ResHydroNet/data/manuscript/reference_tables/: table1_hydrological_conditions.csv  table2_overall_reconstruction_performance.csv  table3_mesh_resolution_effect.csv  table4_scenario_screening_indicators.csv  table_s10_mae_comparison.csv  table_s1_complete_boundary_conditions.csv  table_s2_mesh_statistics.csv  table_s3_dataset_records.csv  table_s4_features_targets_residuals.csv  table_s5_hyperparameters.csv  table_s6_generalization.csv  table_s7_raw_corrected_rmse.csv  table_s8_computational_efficiency.csv  table_s9_ablation.csv
MF-ResHydroNet/docs/: DATA_CONTRACT.md  REPRODUCIBILITY_MAP.md
MF-ResHydroNet/scripts/: build_reference_tables.py  evaluate_predictions.py  make_all.py  make_demo_data.py  scenario_screening.py  train_demo.py
MF-ResHydroNet/src/mf_reshydronet/: __init__.py  constants.py  data.py  metrics.py  model.py  ridge.py  scenario.py  tables.py
MF-ResHydroNet/tests/: run_smoke_tests.py
